Adding test coverage plugin